--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.example.store_design">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="waseet_design"
+        android:label="Wasit"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
