--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.7
   card_swiper: ^3.0.1
+  introduction_screen: ^3.1.11
 
 dependency_overrides:
   meta: 1.9.0
+  collection: ^1.17.1
 
 dev_dependencies:
   flutter_test:
